Manifests/07_security/secret_rotasyonu_manifest_2.yaml
# billing-api isimli Deployment nesnesi tanımlama dosyası
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-api
  namespace: production
  annotations:
    # Bu deployment'a bağlı configmap veya secret değiştiğinde otomatik restart et!
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: api
        image: billing:v1.2
