Manifests/07_security/service_account_ve_is_yuku_kimligi_manifest_1.yaml
# web-frontend isimli Deployment nesnesi tanımlama dosyası
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  namespace: production
spec:
  template:
    spec:
      automountServiceAccountToken: false # Sadece bu pod için kapat
      containers:
      - name: frontend
        image: nginx:alpine
