Manifests/07_security/service_account_ve_is_yuku_kimligi_manifest_2.yaml
# api-client-pod isimli Pod nesnesi tanımlama dosyası
apiVersion: v1
kind: Pod
metadata:
  name: api-client-pod
  namespace: production
spec:
  automountServiceAccountToken: false # Otomatik kuralı kapat
  containers:
  - name: client
    image: my-api-client:v1.0
    volumeMounts:
    - mountPath: /var/run/secrets/tokens
      name: projected-token-volume
  volumes:
  - name: projected-token-volume
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: "my-api-server" # Sadece bu servisi hedefler
          expirationSeconds: 3600 # 1 saat sonra geçersiz kılınır
          path: api-token
