Manifests/07_security/networkpolicy_derin_dalis_manifest_2.yaml
# frontend-policy isimli NetworkPolicy nesnesi tanımlama dosyası
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: network-policy-tutorial
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {} # Dış dünyadan (her yerden) giriş trafiğine izin ver
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend # Sadece backend etiketli poda gidebilir
