Manifests/07_security/admission_policy_derin_dalis_manifest_1.yaml
# min-replicas-policy isimli ValidatingAdmissionPolicy nesnesi tanımlama dosyası
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: min-replicas-policy
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
  validations:
  - expression: "object.spec.replicas >= 3"
    messageExpression: "'Hata: Üretim ortamında deployment kopyası (' + string(object.spec.replicas) + ') 3ten az olamaz!'"
