Manifests/07_security/admission_policy_derin_dalis_manifest_5.yaml
# secure-registries-only isimli ValidatingAdmissionPolicy nesnesi tanımlama dosyası
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: secure-registries-only
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  validations:
  - expression: "object.spec.containers.all(c, c.image.startsWith('gcr.io/') || c.image.startsWith('quay.io/'))"
    message: "Hata: İmajlar yalnızca 'gcr.io/' veya 'quay.io/' kayıt defterlerinden çekilebilir!"
